--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Baech Day</title>
+    <title>BaichDay</title>
   </head>
   <body>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
